@@ -1,7 +1,7 @@
 Description: Enable ZFS support in grub-probe and grub-setup
 Author: Robert Millan <rmh@debian.org>
 Forwarded: not-needed
-Last-Update: 2010-07-29
+Last-Update: 2010-09-10
 
 --- a/conf/common.rmk	2010-07-06 18:27:55 +0000
 +++ b/conf/common.rmk	2010-07-29 14:19:10 +0000
@@ -35,7 +35,13 @@ Last-Update: 2010-07-29
  	kern/partition.c partmap/msdos.c partmap/bsdlabel.c 		\
  	partmap/apple.c partmap/sun.c partmap/sunpc.c partmap/gpt.c	\
  	kern/fs.c kern/env.c fs/fshelp.c disk/raid.c			\
-
+ 	disk/raid5_recover.c disk/raid6_recover.c 			\
+ 	disk/mdraid_linux.c disk/dmraid_nvidia.c disk/lvm.c 		\
+ 	grub_fstest_init.c
++grub_fstest_CFLAGS = -I$(GRUB_CONTRIB)/zfs/include
+ 
+ # For grub-mkfont.
+ ifeq ($(enable_grub_mkfont), yes)
 --- a/conf/i386-pc.rmk	2010-07-06 18:27:55 +0000
 +++ b/conf/i386-pc.rmk	2010-07-29 14:19:31 +0000
 @@ -75,6 +75,12 @@
